# ObjMatrix

./: Makefile  ObjMatrix.oc  ObjMatrix.oc.in  README.md  configure.ac  extra.mk.in  meson.build
.fossil-settings/: ignore-glob
.github/ISSUE_TEMPLATE/: config.yml
src/: MTXClient.h  MTXClient.m  MTXRequest.h  MTXRequest.m  MTXSQLite3Storage.h  MTXSQLite3Storage.m  MTXStorage.h  Makefile  ObjMatrix.h  meson.build
src/exceptions/: MTXClientException.h  MTXClientException.m  MTXFetchRoomListFailedException.h  MTXFetchRoomListFailedException.m  MTXJoinRoomFailedException.h  MTXJoinRoomFailedException.m  MTXLeaveRoomFailedException.h  MTXLeaveRoomFailedException.m  MTXLoginFailedException.h  MTXLoginFailedException.m  MTXLogoutFailedException.h  MTXLogoutFailedException.m  MTXSendMessageFailedException.h  MTXSendMessageFailedException.m  MTXSyncFailedException.h  MTXSyncFailedException.m  Makefile  meson.build
tests/: Makefile  Tests.m  meson.build  tests.m
